@@ -35,13 +35,15 @@ use \booktool_wordimport\wordconverter;
 /**
  * Import HTML pages from a Word file
  *
- * @param string $wordfilename Word file
- * @param stdClass $book
+ * @param string $wordfilename Word file to be imported
+ * @param stdClass $book Book being imported into
  * @param context_module $context
- * @param bool $splitonsubheadings
+ * @param bool $splitonsubheadings Split book into chapters and subchapters
+ * @param bool $verbose Print extra progress messages
  * @return void
  */
-function booktool_wordimport_import($wordfilename, $book, $context, $splitonsubheadings) {
+function booktool_wordimport_import(string $wordfilename, stdClass $book, context_module $context,
+                bool $splitonsubheadings = false, bool $verbose = false) {
     global $CFG;
 
     // Convert the Word file content into XHTML and an array of images.
@@ -49,114 +51,17 @@ function booktool_wordimport_import($wordfilename, $book, $context, $splitonsubh
     $word2xml = new wordconverter();
     $htmlcontent = $word2xml->import($wordfilename, $imagesforzipping);
 
-    // Create a temporary Zip file to store the HTML and images for feeding to the Book HTML import function.
+    // Store images in a Zip file, split the HTML file into sections,
+    // add the sections to the Zip file, and store it in Moodles' file storage area.
     $zipfilename = tempnam($CFG->tempdir, "zip");
-    $zipfile = new ZipArchive;
-    if (!($zipfile->open($zipfilename, ZipArchive::CREATE))) {
-        // Cannot open zip file.
-        throw new \moodle_exception('cannotopenzip', 'error');
-    }
-
-    // Add any images to the Zip file.
-    if (count($imagesforzipping) > 0) {
-        foreach ($imagesforzipping as $imagename => $imagedata) {
-            $zipfile->addFromString($imagename, $imagedata);
-        }
-    }
-
-    // Split the HTML file into sections based on headings, and add the sections to the Zip file.
-    booktool_wordimport_split($htmlcontent, $zipfile, $splitonsubheadings, false);
-
-    // Add the Zip file to the file storage area.
-    $fs = get_file_storage();
-    $zipfilerecord = array(
-        'contextid' => $context->id,
-        'component' => 'user',
-        'filearea' => 'draft',
-        'itemid' => $book->revision,
-        'filepath' => "/",
-        'filename' => basename($zipfilename)
-        );
-    $zipfile = $fs->create_file_from_pathname($zipfilerecord, $zipfilename);
+    $zipfile = $word2xml->zipimages($zipfilename, $imagesforzipping);
+    $word2xml->split($htmlcontent, $zipfile, $splitonsubheadings, false);
+    $zipfile = $word2xml->store($zipfilename, $zipfile, $context);
+    unlink($zipfilename);
 
     // Call the core HTML import function to really import the content.
     // Argument 2, value 2 = Each HTML file represents 1 chapter.
     toolbook_importhtml_import_chapters($zipfile, 2, $book, $context);
-}
-
-/**
- * Split HTML into multiple sections based on headings
- *
- * This function can be called by other plugins such as Lesson. The HTML content must have been created by mapping
- * Heading 1 styles in Word into h3 elements in the HTML. This convention is followed because Moodle doesn't use h1
- * elements properly, I think.
- *
- * @param string $htmlcontent HTML from a single Word file
- * @param ZipArchive $zipfile Zip file to insert HTML sections into
- * @param bool $splitonsubheadings Split on h4 as well as h3
- * @param bool $verbose Display extra progress messages
- * @return void
- */
-function booktool_wordimport_split(string $htmlcontent, ZipArchive $zipfile, bool $splitonsubheadings, bool $verbose = false) {
-
-    // Split the single HTML file into multiple chapters based on h3 elements.
-    $h1matches = null;
-    $chaptermatches = null;
-    // Grab title and contents of each 'Heading 1' section, which is mapped to h3.
-    $chaptermatches = preg_split('#<h3>.*</h3>#isU', $htmlcontent);
-    preg_match_all('#<h3>(.*)</h3>#i', $htmlcontent, $h1matches);
-    // @codingStandardsIgnoreLine debugging(__FUNCTION__ . ":" . __LINE__ . ": n chapters = " . count($chaptermatches), DEBUG_WORDIMPORT);
-
-    // If no h3 elements are present, treat the whole file as a single chapter.
-    if (count($chaptermatches) == 1) {
-        $zipfile->addFromString("index.htm", $htmlcontent);
-    }
-
-    // Create a separate HTML file in the Zip file for each section of content.
-    for ($i = 1; $i < count($chaptermatches); $i++) {
-        // Remove any tags from heading, as it prevents proper import of the chapter title.
-        $chaptitle = strip_tags($h1matches[1][$i - 1]);
-        // @codingStandardsIgnoreLine debugging(__FUNCTION__ . ":" . __LINE__ . ": chaptitle = " . $chaptitle, DEBUG_WORDIMPORT);
-        $chapcontent = $chaptermatches[$i];
-        $chapfilename = sprintf("index%02d.htm", $i);
-
-        // Remove the closing HTML markup from the last section.
-        if ($i == (count($chaptermatches) - 1)) {
-            $chapcontent = substr($chapcontent, 0, strpos($chapcontent, "</div></body>"));
-        }
-
-        if ($splitonsubheadings) {
-            // Save each subsection as a separate HTML file with a '_sub.htm' suffix.
-            $h2matches = null;
-            $subchaptermatches = null;
-            // Grab title and contents of each subsection.
-            preg_match_all('#<h4>(.*)</h4>#i', $chapcontent, $h2matches);
-            $subchaptermatches = preg_split('#<h4>.*</h4>#isU', $chapcontent);
-
-            // First save the initial chapter content.
-            $chapcontent = $subchaptermatches[0];
-            $chapfilename = sprintf("index%02d_00.htm", $i);
-            $htmlfilecontent = "<html><head><title>{$chaptitle}</title></head>" .
-                "<body>{$chapcontent}</body></html>";
-            $zipfile->addFromString($chapfilename, $htmlfilecontent);
-
-            // Save each subsection to a separate file.
-            for ($j = 1; $j < count($subchaptermatches); $j++) {
-                $subchaptitle = strip_tags($h2matches[1][$j - 1]);
-                $subchapcontent = $subchaptermatches[$j];
-                $subsectionfilename = sprintf("index%02d_%02d_sub.htm", $i, $j);
-                $htmlfilecontent = "<html><head><title>{$subchaptitle}</title></head>" .
-                    "<body>{$subchapcontent}</body></html>";
-                $zipfile->addFromString($subsectionfilename, $htmlfilecontent);
-            }
-        } else {
-            // Save each section as a HTML file.
-            $htmlfilecontent = "<html><head><title>{$chaptitle}</title></head>" .
-                "<body>{$chapcontent}</body></html>";
-            $zipfile->addFromString($chapfilename, $htmlfilecontent);
-        }
-    }
-    $zipfile->close();
 }
 
 /**
